# template_fastapi

./: .gitignore  Makefile  main.py  pyproject.toml
api/: server.py
api/routes/: todo.py
app/: todo_app.py
app/entities/: todo.py
app/services/: database.py
tests/: test_api.py
