[tool.poetry]
name = "template-fastapi"
version = "0.1.0"
description = ""
authors = ["Nicolas M. <mine.nicolas@gmail.com>"]
readme = "README.md"
packages = [{include = "template_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.3"
fastapi = {extras = ["uvicorn"], version = "^0.108.0"}
sqlmodel = "^0.0.14"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
httpx = "^0.26.0"
aiosqlite = "^0.19.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
